<resources>
    <string name="app_name">Event Tech Organizer</string>
    <string name="title_authentication">Authentication</string>
    <string name="title_insight">Insight</string>
    <string name="title_event">Event</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cd_logo">logo</string>
    <string name="title_register">Selamat Datang</string>
    <string name="title_login">Masuk ke akun Anda</string>
    <string name="subtitle_register">Publikasi event IT milikmu dan jangkau lebih banyak peserta yang sesuai targetmu</string>
    <string name="subtitle_login">Masuk lagi untuk publikasikan event milikmu sesuai targetmu </string>
    <string name="hint_username">Nama Penyelenggara</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sudah_punya_akun">Sudah punya akun? </string>
    <string name="masuk"> Masuk</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="suggest_register_text">Belum punya akun?  </string>
    <string name="forgot_password">Lupa password?</string>
    <color name="mtrl_textinput_default_box_stroke_color">@color/whitegray</color>
    <string name="cdNotification">tombol notifikasi</string>
    <string name="title_page_home">Event Milikmu</string>
    <string name="cd_category_icon">category icon</string>
    <string name="see_all">Lihat Semua</string>
    <string name="cd_event_type">event type ilustration</string>
    <string name="button_menu">button menu</string>
    <string name="title_event_favorite">Event Favorite</string>
    <string name="cd_back">Back button</string>
    <string name="title_detail">Module Title</string>
    <string name="detail_event">Detail Event</string>
    <string name="title_add_event">Tambahkan Event</string>
    <string name="subtitle_event_seen">Jumlah event dilihat</string>
    <string name="subtitle_event_opened">Jumlah link pendaftaran di buka</string>
    <string name="cd_event_poster">Poster event</string>
    <string name="edit_event">Sunting Event</string>
    <string name="delete_event">Hapus Event</string>
    <string name="dialog_title_delete">Hapus Event</string>
    <string name="desc_dialog_delete">Apakah anda yakin akan menghapus event %s</string>
    <string name="text_save_changes">Simpan Perubahan</string>
    <string name="text_send_reset">Kirim Reset Password</string>
    <string name="cd_ilu_empty">ilustration empty event</string>
    <string name="text_empty_event">Kamu belum memiliki Event</string>
    <string name="subtitle_empty_event">Yuk, buat di halaman tambah event</string>
    <string name="text_cancel">Batalkan</string>
    <string name="text_accept">Setuju</string>
</resources>