<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.maungedev.event.ui.home.HomeFragment"
    android:background="@color/black"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/range_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_marginTop="@dimen/range_16"
            android:layout_marginStart="@dimen/range_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:contentDescription="@string/cd_logo"
            android:src="@drawable/ic_logo_bar" />


    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/range_24"
        android:layout_marginTop="@dimen/range_8"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/title_page_home"
        android:textColor="@color/white"
        android:textSize="@dimen/size_16"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
         />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_home"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/range_16"
        android:paddingBottom="@dimen/range_64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <LinearLayout
        android:id="@+id/layout_empty"
        android:layout_width="match_parent"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ilu_empty"
            android:contentDescription="@string/cd_ilu_empty" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PoppinsMedium"
            android:layout_marginTop="@dimen/range_24"
            android:textSize="@dimen/size_16"
            android:text="@string/text_empty_event"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textSize="@dimen/size_16"
            android:layout_marginTop="@dimen/range_8"
            android:textColor="@color/text_white_gray"
            android:text="@string/subtitle_empty_event"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/ProgressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>