<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/LayoutStyle"
    tools:context=".ui.EditUsernameActivity">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/range_16"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back_button"
            android:padding="@dimen/range_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/cd_back" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/PoppinsSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_16"
            app:layout_constraintBottom_toBottomOf="@+id/btn_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_back"
            android:text="@string/text_edit_username" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_edit_username"
        android:layout_width="@dimen/range_0"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="@dimen/range_16"
        android:layout_marginStart="@dimen/range_0"
        android:layout_marginEnd="@dimen/range_0"
        android:backgroundTint="@android:color/transparent"
        android:textColorHint="@color/whitegray"
        app:boxBackgroundColor="@color/whitegray"
        app:boxStrokeColor="@color/blue"
        app:hintTextColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <com.google.android.material.textfield.TextInputEditText
            android:textColor="@color/white"
            android:backgroundTint="@android:color/transparent"
            android:layout_width="match_parent"
            android:textColorHighlight="@color/white"
            android:inputType="text"
            android:hint="@string/hint_username"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_update"
        style="@style/ButtonStyle16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/range_0"
        android:layout_marginTop="@dimen/range_24"
        android:layout_marginEnd="@dimen/range_0"
        android:text="@string/text_save_changes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_edit_username" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/ProgressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/btn_update"
        app:layout_constraintEnd_toEndOf="@+id/btn_update"
        app:layout_constraintStart_toStartOf="@+id/btn_update"
        app:layout_constraintTop_toTopOf="@+id/btn_update" />
</androidx.constraintlayout.widget.ConstraintLayout>